--- a/Year-3/Artificial-intelligence/lab-2/doc/main.tex
+++ b/Year-3/Artificial-intelligence/lab-2/doc/main.tex
@@ -48,26 +48,53 @@
 
 \section{Описание задания}
 
-\noindentСоставить базу знаний на языке Пролог, которая будет содержать генеалогическое дерево семьи с указанием родственных отношений (например, папа, бабушка и т.д.), опираясь на два первичных факта: родитель и супруг. 
+\noindent
+Описание предметной области. Имеется транспортная сеть, связывающая
+города СНГ. Сеть представлена в виде таблицы связей между городами. Связи
+являются двусторонними, т.е. допускают движение в обоих направлениях.
+Необходимо проложить маршрут из одной заданной точки в другую.
 
-\section{Родословное дерево}
-\includegraphics[width=\linewidth]{tree.png}
+\medskip\noindent
+Этап 1. Неинформированный поиск. На этом этапе известна только
+топология связей между городами. Выполнить:
+\begin{enumerate}
+  \item поиск в ширину;
+  \item поиск глубину;
+  \item поиск с ограничением глубины;
+  \item поиск с итеративным углублением;
+  \item двунаправленный поиск.
+\end{enumerate}
 
-\section{Проверка правил на примерах}
+\noindent
+Отобразить движение по дереву на его графе с указанием сложности
+каждого вида поиска. Сделать выводы.
+
+\medskip\noindent
+Этап 2. Информированный поиск. Воспользовавшись информацией о
+протяженности связей от текущего узла, выполнить:
+
+\begin{enumerate}
+  \item жадный поиск по первому наилучшему соответствию;
+  \item затем, использую информацию о расстоянии до цели по прямой от
+  каждого узла, выполнить поиск методом минимизации суммарной оценки А*.
+\end{enumerate}
+
+\noindent
+Отобразить на графе выбранный маршрут и сравнить его сложность с
+неинформированным поиском. Сделать выводы.
+
+\section{Листинг и результаты.}
 
 \lstinputlisting[
-  style      = Prolog-pygsty,
-  caption    = {База знаний},
-]{../task.pl}
+  style =myc++,
+  caption={Листинг кода},
+]{../main.cpp}
 
 \lstinputlisting[
-  style      = Prolog-pygsty,
-  caption    = {Тестирование на примерах (runfile)},
-]{../run.pl}
+  caption={Результат программы},
+]{../test/out.1}
 
-\lstinputlisting[
-  style      = Prolog-pygsty,
-  caption    = {Тестирование на примерах (runtime)},
-]{../result}
+\section{Вывод программы.}
+
 
 \end{document}
