--- a/Year-3/Artificial-intelligence/lab-2/doc/titular.tex
+++ b/Year-3/Artificial-intelligence/lab-2/doc/titular.tex
@@ -15,7 +15,7 @@
 \huge Системы искусственного интеллекта. Лабораторная работа №2.
 \vspace{0.2cm}
 
-% \LARGE Метод интерполяции кубическими сплайнами.
+\LARGE Вариант 2.
 \end{center}
 \vspace{6 cm}
 
@@ -25,10 +25,10 @@
 Работу выполнил: Кулаков Н.\,В.
 \smallskip
 
-Группа: P3230
+Группа: P33312
 \smallskip
 
-Преподаватель: Кугаевских А.\,В.
+Преподаватель: Королева Ю.\,А.
 \smallskip
 
 \vspace{4cm}
