--- a/Year-3/Artificial-intelligence/lab-2/test/out.1
+++ b/Year-3/Artificial-intelligence/lab-2/test/out.1
@@ -1,2 +1,182 @@
-|
-|- inside call
+exec build/exec
+────────────────────────────────────────────────────────────
+BFS algorithm
+Result: 3550
+└──С.Петербург, 0
+   ├──Витебск, 602
+   │  ├──Брест, 1240
+   │  ├──Вильнюс, 962
+   │  │  ├──Даугавпилс, 1173
+   │  │  └──Киев, 1696
+   │  ├──Воронеж, 1471
+   │  │  └──Ярославль, 2210
+   │  ├──Волгоград, 2057
+   │  │  └──Житомир, 3550
+   │  ├──Ниж.Новгород, 1513
+   │  └──Орел, 1124
+   ├──Калининград, 739
+   ├──Рига, 641
+   │  ├──Каунас, 908
+   │  └──Таллинн, 949
+   ├──Москва, 664
+   │  ├──Казань, 1479
+   │  ├──Минск, 1354
+   │  └──Донецк, 1748
+   └──Мурманск, 1412
+────────────────────────────────────────────────────────────
+DFS algorithm
+Result: 2636
+└──С.Петербург, 0
+   └──Витебск, 602
+      └──Брест, 1240
+         └──Вильнюс, 1771
+            ├──Даугавпилс, 1982
+            ├──Калининград, 2104
+            ├──Каунас, 1873
+            │  └──Рига, 2140
+            │     └──Таллинн, 2448
+            └──Киев, 2505
+               └──Житомир, 2636
+────────────────────────────────────────────────────────────
+DFS_limited algorithm
+Result: 3545
+└──С.Петербург, 0
+   └──Витебск, 602
+      ├──Брест, 1240
+      │  └──Вильнюс, 1771
+      │     ├──Даугавпилс, 1982
+      │     ├──Калининград, 2104
+      │     ├──Каунас, 1873
+      │     └──Киев, 2505
+      └──Воронеж, 1471
+         └──Волгоград, 2052
+            └──Житомир, 3545
+────────────────────────────────────────────────────────────
+Iterative_deepening algorithm
+Result: 1827
+└──С.Петербург, 0
+   ├──Витебск, 602
+   │  ├──Брест, 1240
+   │  ├──Вильнюс, 962
+   │  ├──Воронеж, 1471
+   │  ├──Волгоград, 2057
+   │  ├──Ниж.Новгород, 1513
+   │  ├──Орел, 1124
+   │  ├──Брест, 1240
+   │  └──Вильнюс, 962
+   │     ├──Даугавпилс, 1173
+   │     └──Киев, 1696
+   │        └──Житомир, 1827
+   ├──Калининград, 739
+   ├──Рига, 641
+   │  ├──Каунас, 908
+   │  └──Таллинн, 949
+   ├──Москва, 664
+   │  ├──Казань, 1479
+   │  ├──Минск, 1354
+   │  └──Донецк, 1748
+   └──Мурманск, 1412
+────────────────────────────────────────────────────────────
+Bidirectional algorithm
+Result: 1827
+├──С.Петербург, 0
+│  ├──Витебск, 602
+│  │  ├──Брест, 1240
+│  │  ├──Вильнюс, 962
+│  │  ├──Воронеж, 1471
+│  │  ├──Ниж.Новгород, 1513
+│  │  ├──С.Петербург, 1204
+│  │  └──Орел, 1124
+│  ├──Калининград, 739
+│  ├──Рига, 641
+│  │  ├──Каунас, 908
+│  │  └──Таллинн, 949
+│  ├──Москва, 664
+│  │  ├──Казань, 1479
+│  │  └──Минск, 1354
+│  └──Мурманск, 1412
+└──Житомир, 0
+   ├──Киев, 131
+   │  ├──Вильнюс, 865
+   │  ├──Житомир, 262
+   │  ├──Кишинев, 598
+   │  ├──Одесса, 618
+   │  └──Харьков, 602
+   ├──Донецк, 863
+   │  ├──Москва, 1947
+   │  └──Орел, 1572
+   └──Волгоград, 1493
+      ├──Воронеж, 2074
+      └──Витебск, 2948
+────────────────────────────────────────────────────────────
+Dijkstra algorithm
+Result: 1827
+└──С.Петербург, 0
+   ├──Витебск, 602
+   │  ├──Брест, 1240
+   │  ├──Вильнюс, 962
+   │  │  ├──Даугавпилс, 1173
+   │  │  └──Киев, 1696
+   │  │     └──Житомир, 1827
+   │  ├──Воронеж, 1471
+   │  ├──Волгоград, 2057
+   │  ├──Ниж.Новгород, 1513
+   │  ├──С.Петербург, 1204
+   │  └──Орел, 1124
+   ├──Калининград, 739
+   ├──Рига, 641
+   │  ├──Каунас, 908
+   │  └──Таллинн, 949
+   ├──Москва, 664
+   │  ├──Казань, 1479
+   │  │  └──Уфа, 2004
+   │  ├──Минск, 1354
+   │  │  └──Ярославль, 2294
+   │  └──Донецк, 1748
+   └──Мурманск, 1412
+────────────────────────────────────────────────────────────
+Greedy_first_best_match algorithm
+Result: 1827
+└──С.Петербург, 0, 1078
+   ├──Витебск, 602
+   │  ├──Брест, 1240
+   │  ├──Вильнюс, 962
+   │  │  ├──Даугавпилс, 1173
+   │  │  ├──Каунас, 1064
+   │  │  └──Киев, 1696
+   │  │     └──Житомир, 1827
+   │  ├──Воронеж, 1471
+   │  ├──Волгоград, 2057
+   │  ├──Ниж.Новгород, 1513
+   │  ├──С.Петербург, 1204
+   │  └──Орел, 1124
+   ├──Калининград, 739
+   ├──Рига, 641
+   ├──Москва, 664
+   └──Мурманск, 1412
+────────────────────────────────────────────────────────────
+Minimization_A_* algorithm
+Result: 1827
+└──С.Петербург, 0
+   ├──Витебск, 602, 553
+   │  ├──Брест, 1240, 395
+   │  ├──Вильнюс, 962, 560
+   │  │  ├──Даугавпилс, 1173, 640
+   │  │  └──Киев, 1696, 133
+   │  │     └──Житомир, 1827, 0
+   │  ├──Воронеж, 1471, 754
+   │  ├──Волгоград, 2057, 1155
+   │  ├──Ниж.Новгород, 1513, 1218
+   │  └──Орел, 1124, 593
+   ├──Калининград, 739, 741
+   ├──Рига, 641, 803
+   │  ├──Каунас, 908, 608
+   │  └──Таллинн, 949, 1050
+   ├──Москва, 664, 854
+   │  ├──Казань, 1479, 1496
+   │  │  └──Уфа, 2004, 1899
+   │  ├──Минск, 1354, 412
+   │  │  └──Ярославль, 2294, 1097
+   │  └──Донецк, 1748, 709
+   └──Мурманск, 1412, 2094
+────────────────────────────────────────────────────────────
